# hpgl-buddy

./: .dockerignore  .gitignore  CONTRIBUTING.md  DESIGN.md  Dockerfile  INTEGRATION.md  LICENSE  README.md  SECURITY.md  docker-compose.test.yml  pyproject.toml  requirements-dev-rough.txt  requirements-dev.txt  requirements-rough.txt  requirements.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  device_support.yml  feature_request.yml
.github/workflows/: dependencies_update.yml  release.yml  test.yml
examples/: README.md  demo-g.hpgl
src/hpgl_buddy/: __init__.py  cli.py  errors.py  logging_setup.py  version.py
src/hpgl_buddy/demo/: __init__.py  generator.py  scene.py
src/hpgl_buddy/devices/: __init__.py  base.py  registry.py
src/hpgl_buddy/devices/profiles/: hp7475a.toml
src/hpgl_buddy/execution/: __init__.py  executor.py  flow_control.py  planner.py  progress.py  run.py
src/hpgl_buddy/hpgl/: __init__.py  instruction.py  parser.py  syntax_check.py  tokens.py
src/hpgl_buddy/interface/: __init__.py  base.py  serial_rs232.py
src/hpgl_buddy/status/: __init__.py  adhoc.py  escape.py  exchange.py  monitor.py  status_codes.py
tests/: test_basic.py  test_execution.py
